; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/utils/extr_pcsc_funcs.c_scard_select_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/utils/extr_pcsc_funcs.c_scard_select_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scard_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.scard_data*, i16, i8*, i64*)* @scard_select_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scard_select_file(%struct.scard_data* %0, i16 zeroext %1, i8* %2, i64* %3) #0 {
  %5 = alloca %struct.scard_data*, align 8
  %6 = alloca i16, align 2
  %7 = alloca i8*, align 8
  %8 = alloca i64*, align 8
  store %struct.scard_data* %0, %struct.scard_data** %5, align 8
  store i16 %1, i16* %6, align 2
  store i8* %2, i8** %7, align 8
  store i64* %3, i64** %8, align 8
  %9 = load %struct.scard_data*, %struct.scard_data** %5, align 8
  %10 = load i16, i16* %6, align 2
  %11 = load i8*, i8** %7, align 8
  %12 = load i64*, i64** %8, align 8
  %13 = load %struct.scard_data*, %struct.scard_data** %5, align 8
  %14 = getelementptr inbounds %struct.scard_data, %struct.scard_data* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @_scard_select_file(%struct.scard_data* %9, i16 zeroext %10, i8* %11, i64* %12, i32 %15, i32* null, i32 0)
  ret i32 %16
}

declare dso_local i32 @_scard_select_file(%struct.scard_data*, i16 zeroext, i8*, i64*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
